--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,44 @@ header nav a {
 
 footer {
   background: #f2f1f0;
-  padding: 20px 0;
-  bottom: 0;
+  padding: 10px 0;
+  /* bottom: 0; */
   width: 100%;
+  padding-bottom: 5px;
+}
+
+.footerkontakt p {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000000;
+  font-size: 20px;
+  margin: 4px;
+  padding: 10px;
+}
+
+.footermmd p {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000000;
+  font-size: 20px;
+  margin: 4px;
+  padding: 10px;
+}
+
+.mail {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000000;
+  font-size: 20px;
+  margin: 4px;
+  width: 100%;
+  padding-bottom: 5px;
+  padding: 10px 0;
+  text-decoration: none;
+}
+
+.mail:hover {
+  text-decoration: underline;
+  transform: translate(-50%, -50%) scale(1.05);
+  opacity: 1;
+  text-shadow: 0 4px 14px rgba(0, 0, 0, 0.45);
 }
 
 h1 {
@@ -32,13 +67,22 @@ h1 {
   margin-right: 3vw;
 }
 
-.idastamhus h1 {
+.ida {
   font-family: "Oswald", system-ui, sans-serif;
   font-size: clamp(38px, 6.5vw, 96px);
   color: #0a13bf;
   line-height: 1;
   margin: 0;
 }
+
+.stamhus {
+  font-family: "Oswald", system-ui, sans-serif;
+  font-size: clamp(38px, 6.5vw, 96px);
+  color: #0a13bf;
+  line-height: 1;
+  margin: 0;
+}
+
 
 p {
   font-size: 18px;
@@ -82,10 +126,11 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   color: #000000;
-  text-align: left;
+  /* text-align: left; */
   max-width: 680px;
   padding: 8px 12px;
   margin: 6px auto 0 auto;
+  text-align: justify;
 }
 .tematitelh2 {
   font-family: "Oswald", "Plus Jakarta Sans", sans-serif;
@@ -160,3 +205,4 @@ h3 {
   margin: 8px auto 0 auto;
 }
 /************* TEKST GÆLDENDE FOR ALT PORTFOLIO  ***************/
+
